--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 body {
-    width: 100vw;
-    height: 100vh;
-    background: black;
-    overflow: hidden;
-    margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background: black;
+  overflow: hidden;
+  margin: 0;
 }
 
 canvas {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+#container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+audio {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 100;
 }
